Reworked html structure a bit to facilitate my styling. Cleaned up code and pushed assets folder with our current images up.

--- a/style.css
+++ b/style.css
@@ -4,21 +4,63 @@ body, html {
 
 .bg { 
     /* The image used */
-    background-image: url("https://images.pexels.com/photos/54455/cook-food-kitchen-eat-54455.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=350");
+    /* background-image:
+    linear-gradient(
+        315deg,
+      transparent,
+      black 48%,
+      black 52%,
+      transparent 100%
+    ),
+    url("https://images.pexels.com/photos/54455/cook-food-kitchen-eat-54455.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=350"); */
 
     /* Full height */
     height: 100%; 
 
     /* Center and scale the image nicely */
+    background-color: rgb(35, 37, 40);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .welcomePage{
-    margin-top: 170px;
+    background-image:
+    linear-gradient(
+        to right,
+        rgb(35, 37, 40),
+      transparent 25%,
+    transparent 75%,
+    rgb(35, 37, 40) 100%
+    ), url("assets/images/brooke-lark-500141-unsplash.jpg");
+    background-size: 100%;
+    opacity: 1;
+    margin-top: 0;
+    background-color: transparent;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 150px;
+    padding-right: 150px;
 }
 #map{
     height:400px;
     width:100%;
+  }
+form{
+    background-image: url("assets/images/patrick-browne-568830-unsplash.jpg");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-color: #aaa;
+  }
+  .btn{
+      margin:15px;
+  }
+  .form-control{
+      padding: 0px, 15px;
+  }
+  #userResult{
+      background-image: url("assets/images/patrick-browne-568830-unsplash.jpg");
+      background-color: green;
+      background-size: 100%;
+      width: auto;
   }
