--- a/style.css
+++ b/style.css
@@ -90,8 +90,45 @@ body, html {
 #top-form, #left-form, #right-form{
     background-color: transparent;
 }
-
-
+#left-form{
+    background: rgb(35, 37, 40);
+    background: linear-gradient(
+        to right,
+        rgba(35,37,40,0),
+        rgba(35,37,40,.9) 8%,
+         rgba(35,37,40,1) 100%
+         );
+    height: 50vh;
+    width: 100%;
+    margin-top: 50vh;
+    background-position: right;
+    color: #eee;
+    float: right;
+    text-align: right;
+    padding-top: 4vh;
+    padding-left: 3.5em;
+    min-height: 390px;
+}
+#right-form{
+    background: rgb(35, 37, 40);
+    background: linear-gradient(
+        to left,
+        rgba(35,37,40,0),
+        rgba(35,37,40,.9) 8%,
+         rgba(35,37,40,1) 100%
+         );
+    height: 50vh;
+    margin-top: 0;
+    width: 100%;
+    background-position: left;
+    color: #eee;
+    float: left;
+    text-align: left;
+    padding-top: 4vh;
+    padding-right: 3.5em;
+    min-height: 390px;
+    
+}
 
 #map{
     height:400px;
