--- a/style.css
+++ b/style.css
@@ -129,10 +129,59 @@ body, html {
     min-height: 390px;
     
 }
-
+ /* PAGE THREE STUFF */
 #map{
-    height:400px;
+    height:40vh;
     width:100%;
+    opacity: .8;
+}
+#map-holder{
+    background: rgb(35, 37, 40);
+    background: linear-gradient(
+        to left,
+        rgba(35,37,40,0),
+        rgba(35,37,40,.9) 8%,
+         rgba(35,37,40,1) 100%
+         );
+    height: 50vh;
+    width: 100%;
+    margin-top: 50vh;
+    background-position: left;
+    color: #eee;
+    float: left;
+    text-align: left;
+    padding-top: 4vh;
+    padding-right: 3.5em;
+    min-height: 390px;
+}
+#user-result-body{
+    background: rgb(35, 37, 40);
+    background: linear-gradient(
+        to right,
+        rgba(35,37,40,0),
+        rgba(35,37,40,.9) 8%,
+         rgba(35,37,40,1) 100%
+         );
+    height: 50vh;
+    width: 100%;
+    margin-top: 0;
+    background-position: right;
+    color: #eee;
+    float: right;
+    text-align: right;
+    padding-top: 4vh;
+    padding-left: 3.5em;
+    min-height: 390px;
+}
+.dropdown{
+    
+}
+.dd-label{
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.alltxt{
+    font-size: 1.4em;
 }
 .btn{
       margin:15px;
@@ -142,6 +191,7 @@ body, html {
 }
 p{
     font-size: 1.4em;
+    padding: 0;
 }
 h3{
     font-weight: 600;
