--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* STYLE */
+
 *{
     margin:0px;
     padding:0px;
@@ -7,7 +9,6 @@ body, html {
     height: 100vh;
 }
 .bg { 
-    /* The image used */
     background-image:
     linear-gradient(
     to right,
@@ -28,11 +29,7 @@ body, html {
     background-color: rgb(35, 37, 40);
     height: 100%;
     min-height: 780px;
-
-    /* Full height */
     height: 100%; 
-
-    /* Center and scale the image nicely */
     background-color: rgb(35, 37, 40);
     background-position: center;
     background-size: cover;
@@ -131,9 +128,10 @@ body, html {
 }
  /* PAGE THREE STUFF */
 #map{
-    height:40vh;
-    width:100%;
+    height:37vh;
+    width:95%;
     opacity: .8;
+    border: 10px solid rgb(31, 33, 37);
 }
 #map-holder{
     background: rgb(35, 37, 40);
@@ -177,7 +175,7 @@ body, html {
     
 }
 .dd-label{
-    padding-left: 20px;
+    padding-left: 0px;
     padding-right: 20px;
 }
 .alltxt{
@@ -188,12 +186,35 @@ body, html {
 }
 .form-control{
       padding: 0px, 15px;
+      width: 50%;
 }
 p{
-    font-size: 1.4em;
+    font-size: 1.5em;
     padding: 0;
 }
 h3{
     font-weight: 600;
     font-size: 2.3em;
 }
+
+
+
+
+/* MEDIA QUERIES BELOW */
+
+@media screen and (max-width: 980px){
+
+
+}
+
+@media screen and (max-width: 768px){
+
+    
+}
+
+@media screen and (max-width: 640px){
+
+    
+}
+
+/* MAYBE DO ONE MORE THAT'S EXTRA NARROW? */
