--- a/style.css
+++ b/style.css
@@ -153,3 +153,15 @@ h3{
     width:200px;
 
 }
+
+h6{
+    color:white;
+    border:2px solid black;
+    background-color: black;
+    width:200px;
+    text-align: center;
+}
+
+#imageInput{
+    width:500px;
+}
