--- a/style.css
+++ b/style.css
@@ -231,6 +231,7 @@ h3{
     width: 300px;
     height: 300px;
     cursor: pointer;
+    margin-top: 150px;
   }
 
   #coin div {
@@ -244,7 +245,7 @@ h3{
             box-shadow: inset 0 0 45px rgba(255,255,255,.3), 0 12px 20px -10px rgba(0,0,0,.4);
   }
   .side-a {
-    background: url("/Users/jyoti/project_one/assets/images/tails.png");
+    background: url("./assets/images/tails.png");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -252,7 +253,7 @@ h3{
     width: 100%;
   }
   .side-b {
-    background: url("/Users/jyoti/project_one/assets/images/heads.png");
+    background: url("./assets/images/heads.png");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -277,16 +278,16 @@ h3{
   }
   
   #coin.heads {
-    -webkit-animation: flipHeads 3s ease-out forwards;
-    -moz-animation: flipHeads 3s ease-out forwards;
-      -o-animation: flipHeads 3s ease-out forwards;
-         animation: flipHeads 3s ease-out forwards;
+    -webkit-animation: flipHeads 5s ease-out forwards;
+    -moz-animation: flipHeads 5s ease-out forwards;
+      -o-animation: flipHeads 5s ease-out forwards;
+         animation: flipHeads 5s ease-out forwards;
   }
   #coin.tails {
-    -webkit-animation: flipTails 3s ease-out forwards;
-    -moz-animation: flipTails 3s ease-out forwards;
-      -o-animation: flipTails 3s ease-out forwards;
-         animation: flipTails 3s ease-out forwards;
+    -webkit-animation: flipTails 5s ease-out forwards;
+    -moz-animation: flipTails 5s ease-out forwards;
+      -o-animation: flipTails 5s ease-out forwards;
+         animation: flipTails 5s ease-out forwards;
   }
   
   @-webkit-keyframes flipHeads {
