--- a/style.css
+++ b/style.css
@@ -259,6 +259,8 @@ h6{
     width:500px;
 }
 
+/* coin flip */
+
   #coin div {
     width: 100%;
     height: 100%;
@@ -325,7 +327,6 @@ h6{
   }
   
   
-
 
 /* MEDIA QUERIES BELOW */
 
