--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ body, html {
 #map{
     height:37vh;
     width:95%;
-    opacity: .8;
+    opacity: 1;
     border: 10px solid rgb(31, 33, 37);
 }
 #map-holder{
@@ -202,6 +202,40 @@ body, html {
     padding-left: 3.5em;
     min-height: 390px;
 }
+.carousel-item{
+    background-image: url("assets/images/no_page_load.jpg");
+    background-size: contain;
+    background-color: rgb(31, 33, 37);
+    height: 240px;
+    width: 95%;
+    border: 10px solid rgb(31, 33, 37);
+}
+.carousel-caption{
+    background-color: rgba(238,238,238,0);
+    /* color: rgb(35, 37, 40); */
+    color: #eee;
+    font-weight: 600;
+    text-shadow: 4px 4px 4px rgb(35, 37, 40);
+    width: 100%;
+    text-align: left;
+    height: auto;
+    padding-top:5px;
+    padding-bottom: 70px;
+    display: inline-block;
+    position: relative;
+    bottom: 50px;
+    margin-right: 30px;
+}
+#decisionMade{
+    text-align:right;
+    color:#eee;
+    padding: 20px 0px 10px 30px;
+    position: relative;
+    right: 3vh;
+}
+#restarauntImages{
+    width: 100%;
+}
 .dropdown{
     padding: 0px;
 }
@@ -227,17 +261,13 @@ h3{
     font-weight: 600;
     font-size: 2.3em;
 }
-
 h4{
-    color:white;
-    width:200px;
-    text-align: center;
+    font-weight: 450;
+    font-size: 1.8em;
 }
-
 h5{
     color:rgb(35, 37, 40);
 }
-
 .w-100{
     cursor:pointer;
 }
@@ -259,15 +289,13 @@ h5{
     width: 300px;
     height: 300px;
     cursor: pointer;
-    margin-top: 150px;
+    padding-top: 30vh;
+    /* margin-top: 40vh; */
   }
-
-
-
+/* 
 #imageInput{
     width:500px;
-}
-
+} */
 /* coin flip */
 
   #coin div {
@@ -310,9 +338,7 @@ h5{
   }
   .side-b {
     -webkit-transform: rotateY(-180deg);
-  
   }
-  
   #coin.heads {
     -webkit-animation: flipHeads 5s ease-out forwards;
     -moz-animation: flipHeads 5s ease-out forwards;
@@ -350,6 +376,15 @@ h5{
 }
 
 @media screen and (max-width: 640px){
+    .bg { 
+        min-height: auto;
+        height: 100vh; 
+    }
+    #welcomePage, #userChoiceForm, #userResult{
+        width: 100%;
+        height: 100vh;
+    }
+
     #welcome-left{
         background:#eee ;
         height: 40vh;
@@ -396,13 +431,14 @@ h5{
   .btn{
     margin: 0px 0px 10px 0px;
 }
+
+/* Page Two */
 #left-form{
     background:#eee ;
     height: 40vh;
     width: 85%;
     margin-top: 5vh;
-    margin-left: auto;
-    background-position: right;
+    /* background-position: right; */
     color: rgb(35, 37, 40);
     float: right;
     text-align: right;
@@ -411,10 +447,11 @@ h5{
     padding-right: 5px;
     min-height: 30vh;
     border: 10px solid rgb(31, 33, 37);
-    line-height: 110%;
-    position: relative;
-    top: 50vh;
     line-height: 100%;
+}
+.lf{
+    position:relative;
+    top:50vh;
 }
 #right-form{
     background: rgb(35, 37, 40);
@@ -431,55 +468,124 @@ h5{
     padding-right: 15px;
     min-height: 30vh;
     border: 10px solid rgb(31, 33, 37);
-    position: relative;
-    bottom: 45vh;
     line-height: 100%;
+}
+.rf{
+    position:relative;
+    bottom:45vh;
 }
 .dropdown{
     padding: 0px;
     position: relative;
-    bottom: 15px;
+    bottom: 13px;
 }
+.dd-label{
+    padding-left: 0px;
+    padding-right: 0px;
+}
+.alltxt{
+    font-size: 1.2em;
+    padding: 0;
+}
+/* PAGE THREE */
 #user-result-body{
-    background:#eee ;
-    height: 40vh;
-    width: 85%;
-    margin-top: 5vh;
+    background: rgb(35, 37, 40);
+    height: 25vh;
+    width: 100%;
+    margin-top: 2vh;
     /* background-position: right; */
     color: rgb(35, 37, 40);
-    float: right;
-    text-align: right;
-    padding-top: 2vh;
-    padding-left: 15px;
+    float: center;
+    text-align: center;
+    padding-top: 1vh;
+    padding-left: 5px;
     padding-right: 5px;
-    min-height: 30vh;
-    border: 10px solid rgb(31, 33, 37);
+    min-height: 25vh;
+    border: 4px solid rgb(31, 33, 37);
     line-height: 110%;
+    z-index: -5;
 }
 #map-holder{
+    visibility: hidden;
     background: rgb(35, 37, 40);
-    height: 45vh;
-    width: 85%;
-    margin-top: 5vh;
-    margin-bottom: 5vh;
-    background-position: left;
+    height: 50vh;
+    width: 100%;
+    margin-top: 0vh;
+    margin-bottom: 0vh;
+    background-position: center;
     color: #eee;
-    float: left;
-    text-align: left;
-    padding-top: 2vh;
-    padding-left: 5px;
-    padding-right: 15px;
+    float: center;
+    text-align: center;
+    padding-top: 1vh;
+    padding-left: 0px;
+    padding-right: 0px;
     min-height: 30vh;
-    border: 10px solid rgb(31, 33, 37)
-}
-#map{
-    height:100%;
-    width:100%;
-    opacity: 1;
-    z-index: 2;
-    /* border: 10px solid rgb(31, 33, 37); */
+    border: 0px solid rgb(31, 33, 37);
+    position: relative;
+    top: 15vh;
 }
 
+.urb{
+height:25vh;
+width:100%;
+}
+.mh{
+    height:55vh;
+    width:100%;
+}
+#map{
+    visibility: visible;
+    height:50vh;
+    width:100%;
+    opacity: 1;
+    border: 5px solid rgb(31, 33, 37);
+}
+
+.carousel-item{
+    background-image: url("assets/images/no_page_load.jpg");
+    background-size: contain;
+    background-color: rgb(31, 33, 37);
+    height: 200px;
+    width: 100%;
+    border: 4px solid rgb(31, 33, 37);
+    z-index:3;
+    visibility: visible;
+}
+
+.carousel-caption{
+    background-color: rgba(238,238,238,0);
+    /* color: rgb(35, 37, 40); */
+    color: #eee;
+    font-weight: 600;
+    text-shadow: 4px 4px 4px rgb(35, 37, 40);
+    width: 100%;
+    text-align: left;
+    height: 120px;
+    padding-top:5px;
+    padding-bottom: 5px;
+    display: inline-block;
+    position: relative;
+    bottom: 50px;
+    margin-right: 0px;
+    visibility: visible;
+}
+#decisionMade{
+    visibility: visible;
+    background-color: rgba(35,37,40,0);
+    text-align:center;
+    color:#eee;
+    padding: 10px;
+    margin:10px;
+    height: 30px;
+    width: 100%;
+    
+}
+#carouselExampleIndicators{
+    visibility: visible;
+}
+#restarauntImages{
+    width: 100%;
+}
 }
 
 /* MAYBE DO ONE MORE THAT'S EXTRA NARROW? */
